...
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@color/colorAlerts"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="136dp"
            android:gravity="center"
            android:horizontalSpacing="1dp"
            android:numColumns="3"
...
    </LinearLayout>

    <FrameLayout
        android:id="@+id/menu_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/bottomNavigationView"
        android:layout_gravity="bottom"
        android:background="#ffff">

        <!--shadow.xml inside-->
        <View
            android:layout_width="match_parent"
...
