<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!--Menu code-->
    <!--ALT-ENTER for suggestions @string
     after icon is created, we need to say on activity.xml to use it
     -->

    <item
        android:id="@+id/homeItem"
        android:icon="@drawable/ic_home"
        tools:ignore="MenuTitle" />
    <item
        android:id="@+id/searchItem"
        android:icon="@drawable/ic_search"
        tools:ignore="MenuTitle"/>

    <item
        android:id="@+id/formItem"
        android:icon="@drawable/ic_add"
        tools:ignore="MenuTitle"/>

    <item
        android:id="@+id/notificationItem"
        android:icon="@drawable/ic_alert"
        tools:ignore="MenuTitle"/>
    <item
        android:id="@+id/profileItem"
        android:icon="@drawable/ic_face"
        tools:ignore="MenuTitle" />


</menu>